# patchflowcmake

./: CMakeLists.txt
Micrpython/Angle_Pico_Project/: Flow.py  main.py
Micrpython/Angle_Pico_Project/mqtt_server/: Kalman.py  mqtt_server.py
Micrpython/Motor_Controller_Pico_Project/: Flow.py  cunnnnnnnt.py  main.py  pullup.py
Micrpython/Motor_Controller_Pico_Project/Motors/: DCmotor.py  Encoder.py  Stepper.py  Stepper_Controller.py
Micrpython/Motors/: DCmotor.py  Stepper.py  Stepper_Controller.py
Micrpython/mqtt_server/: Angleometer.py  KalmanAngleOmeter.py  mqtt.mpy  mqtt_server.py  pico_pub.py
data_process/: date_1234.csv  date_3.csv  iteration.csv  process.py
mpu/: CMakeLists.txt  eulerAngleExample.c  mpu9250.c  mpu9250.h
mpu6050/: CMakeLists.txt  mpu6050_i2c.c
spi/: CMakeLists.txt
